Updated the html,css and js: Added some info

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header>
       <div class="overflow-bc">  
               <div class="whiteBc">
-                 <ion-icon name="close-outline" id="close"></ion-icon>
+                 <ion-icon name="close-outline" class="close" aria-placeholder="close"></ion-icon>
                  <h2 class="hide-h2"><ion-icon name="bulb-outline" id="bulb"></ion-icon>Tips</h2>
                  <ul>
                      <li class="hide-Li">You can delete an item by either clicking on the 
@@ -78,5 +78,7 @@
     
     <!-- end container -->
     <script src="main.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
